--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,8 +1,17 @@
 @import "base/null";
 @import "libs/slick";
 @import "base/fonts";
+@import "base/variables";
 
 body {
   font-family: "museo", sans-serif;
   font-weight: 500;
 }
+.container {
+  max-width: 950px;
+  margin: 0 auto;
+}
+
+@import "blocks/promo";
+@import "blocks/header";
+@import "blocks/buttons";
