--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,3 +15,6 @@ body {
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/buttons";
+@import "blocks/advantages";
+
+@import "base/media";
