--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,5 +16,7 @@ body {
 @import "blocks/header";
 @import "blocks/buttons";
 @import "blocks/advantages";
+@import "blocks/consultation";
+@import "blocks/forms";
 
 @import "base/media";
