--- a/app/scss/blocks/_buttons.scss
+++ b/app/scss/blocks/_buttons.scss
@@ -18,4 +18,9 @@
     font-size: 16px;
     line-height: 25px;
   }
+  &--mini {
+    width: 131px;
+    height: 40px;
+    font-size: 14px;
+  }
 }
