--- a/app/scss/base/_media.scss
+++ b/app/scss/base/_media.scss
@@ -12,6 +12,17 @@
     }
   }
 }
+@media (max-width: 730px) {
+  .catalog {
+    &__tabs {
+      flex-direction: column;
+    }
+    &__tab {
+      width: 90%;
+      margin-bottom: 10px;
+    }
+  }
+}
 @media (max-width: 670px) {
   .header {
     &__official {
@@ -22,6 +33,13 @@
     &__title {
       font-size: 29px;
       line-height: 45px;
+    }
+  }
+}
+@media (max-width: 620px) {
+  .catalog {
+    &__content {
+      justify-content: center;
     }
   }
 }
@@ -44,6 +62,12 @@
   .advantages {
     &__item {
       width: 100%;
+    }
+  }
+  .catalog {
+    &__title {
+      font-size: 25px;
+      line-height: 25px;
     }
   }
 }
