--- a/app/scss/base/_media.scss
+++ b/app/scss/base/_media.scss
@@ -70,4 +70,10 @@
       line-height: 25px;
     }
   }
+  .footer {
+    &__info {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
 }
