--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,5 +21,6 @@ body {
 @import "blocks/carousel";
 @import "blocks/catalog";
 @import "blocks/feedback";
+@import "blocks/footer";
 
 @import "base/media";
