--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,5 +22,6 @@ body {
 @import "blocks/catalog";
 @import "blocks/feedback";
 @import "blocks/footer";
+@import "blocks/modal";
 
 @import "base/media";
